objects/MasterdataRecordTypeLocalPicklist__mdt.object
<CustomObject>
    <fields>
        <fullName>ControlingFieldFilter__c</fullName>
        <label>Controling Field Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldFilter__c</fullName>
        <label>Field Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MasterdataCustomLocalPicklist__c</fullName>
        <label>Masterdata Custom Local Picklist</label>
        <referenceTo>MasterdataCustomLocalPicklist__mdt</referenceTo>
        <relationshipLabel>Masterdata Record Type Local Picklists</relationshipLabel>
        <relationshipName>Masterdata_Record_Type_Local_Picklists</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>Record Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Masterdata Record Type Local Picklist</label>
    <listViews>
        <fullName>All_Records</fullName>
        <columns>MasterLabel</columns>
        <columns>IsActive__c</columns>
        <columns>DeveloperName</columns>
        <columns>MasterdataCustomLocalPicklist__c</columns>
        <columns>RecordType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Masterdata Record Type Local Picklists</pluralLabel>
</CustomObject>